test/e2e/chainsaw/fsconfig-flagd-proxy-sync/00-install.yaml
---
apiVersion: core.openfeature.dev/v1beta1
kind: FeatureFlagSource
metadata:
    name: source-configuration
spec:
    evaluator: json
    defaultSyncProvider: flagd-proxy
    sources:
        - source: end-to-end-test
          provider: flagd-proxy
    probesEnabled: true
