test/e2e/chainsaw/fsconfig-flagd-proxy-sync/00-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    openfeature.dev/enabled: "true"
    openfeature.dev/featureflagsource: source-configuration
  labels:
    app: open-feature-e2e-test
status:
  phase: Running
spec:
  containers:
    - name: open-feature-e2e-test
      image: nginx:stable-alpine
  initContainers:
    - name: flagd          # this part verifies flagd injection happened
      image: ghcr.io/open-feature/flagd:v0.17.0
      restartPolicy: Always
