test/e2e/chainsaw/fsconfig-flagd-proxy-sync/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: fsconfig-flagd-proxy-sync
spec:
  steps:
    - name: step-00
      try:
        - apply:
            file: ../assets/manifests.yaml
    - name: step-01
      try:
        - apply:
            file: 00-install.yaml
        - wait:
            timeout: 5m
            apiVersion: batch/v1
            kind: Job
            selector: kind=e2e-test-job
            for:
              condition:
                name: complete
    - name: step-02
      try:
        - assert:
            file: 00-assert.yaml
